--- a/index.html
+++ b/index.html
@@ -194,24 +194,28 @@
                     <span data-en="Morocco" data-ar="المغرب"></span>
                 </div>
             </div>
-            <form class="contact-form" id="contactForm">
-                <div class="form-group">
-                    <input type="text" id="name" name="name" required 
-                           data-en-placeholder="Your Name" data-ar-placeholder="اسمك">
-                </div>
-                <div class="form-group">
-                    <input type="email" id="email" name="email" required 
-                           data-en-placeholder="Your Email" data-ar-placeholder="بريدك الإلكتروني">
-                </div>
-                <div class="form-group">
-                    <textarea id="message" name="message" required 
-                              data-en-placeholder="Your Message" data-ar-placeholder="رسالتك"></textarea>
-                </div>
-                <button type="submit" class="submit-btn" data-en="Send Message" data-ar="إرسال الرسالة">
-                    <span class="btn-text"></span>
-                    <i class="fas fa-paper-plane"></i>
-                </button>
-                <div class="form-message"></div>
+            <form class="contact-form" id="contactForm" 
+            action="https://formspree.io/f/mjkyazdl" 
+            method="POST">
+        <!-- Keep all your existing form fields the same -->
+        <div class="form-group">
+          <input type="text" id="name" name="name" required 
+                 data-en-placeholder="Your Name" data-ar-placeholder="اسمك">
+        </div>
+        <div class="form-group">
+          <input type="email" id="email" name="email" required 
+                 data-en-placeholder="Your Email" data-ar-placeholder="بريدك الإلكتروني">
+        </div>
+        <div class="form-group">
+          <textarea id="message" name="message" required 
+                    data-en-placeholder="Your Message" data-ar-placeholder="رسالتك"></textarea>
+        </div>
+        <button type="submit" class="submit-btn" data-en="Send Message" data-ar="إرسال الرسالة">
+          <span class="btn-text"></span>
+          <i class="fas fa-paper-plane"></i>
+        </button>
+        <div class="form-message"></div>
+      </form>
             </form>
         </div>
     </section>
